--- a/hail/python/hail/docs/tutorials/01-genome-wide-association-study.ipynb
+++ b/hail/python/hail/docs/tutorials/01-genome-wide-association-study.ipynb
@@ -888,8 +888,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "entries = entries.annotate(maf_bin = hl.cond(entries.info.AF[0]<0.01, \"< 1%\", \n",
-    "                             hl.cond(entries.info.AF[0]<0.05, \"1%-5%\", \">5%\")))\n",
+    "entries = entries.annotate(maf_bin = hl.if_else(entries.info.AF[0]<0.01, \"< 1%\", \n",
+    "                             hl.if_else(entries.info.AF[0]<0.05, \"1%-5%\", \">5%\")))\n",
     "\n",
     "results2 = (entries.group_by(af_bin = entries.maf_bin, purple_hair = entries.pheno.PurpleHair)\n",
     "      .aggregate(mean_gq = hl.agg.stats(entries.GQ).mean, \n",
